minor changes, some merges

--- a/extracted.bib
+++ b/extracted.bib
@@ -1,5 +1,257 @@
 
 
+@article{Hirota2014a,
+  author =        {{Hirota}, T. and {Kim}, M.~K. and {Kurono}, Y. and
+                   {Honma}, M.},
+  journal =       {\apjl},
+  month =         feb,
+  pages =         {L28},
+  title =         {{A Hot Molecular Circumstellar Disk around the
+                   Massive Protostar Orion Source I}},
+  volume =        {782},
+  year =          {2014},
+  abstract =      {We report new Atacama Large Millimeter/Submillimeter
+                   Array (ALMA) observations of a circumstellar disk
+                   around Source I in Orion KL, an archetype of massive
+                   protostar candidates. We detected two ortho-H2O lines
+                   at 321 GHz (102, 9-93, 6) and 336 GHz (nu2 = 1, 52,
+                   3-61, 6) for the first time in Source I. The latter
+                   one is in a vibrationally excited state at the lower
+                   state energy of 2939 K, suggesting evidence of hot
+                   molecular gas close to Source I. The integrated
+                   intensity map of the 321 GHz line is elongated along
+                   the bipolar outflow while the 336 GHz line map is
+                   unresolved with a beam size of 0.''4. Both of these
+                   maps show velocity gradients perpendicular to the
+                   bipolar outflow. The velocity centroid map of the 321
+                   GHz line implies a spatial and velocity structure
+                   similar to that of vibrationally excited SiO masers
+                   tracing the root of the outflow emanating from the
+                   disk surface. In contrast, the 336 GHz line is most
+                   likely emitting from the disk midplane with a
+                   diameter of 0.''2 (84 AU) as traced by radio
+                   continuum emission and a dark lane devoid of the
+                   vibrationally excited SiO maser emission. The
+                   observed velocity gradient and the spectral profile
+                   of the 336 GHz H2O line can be reconciled with a
+                   model of an edge-on ring-like structure with an
+                   enclosed mass of >7 M &sun; and an excitation
+                   temperature of >3000 K. The present results provide
+                   further evidence of a hot and neutral circumstellar
+                   disk rotating around Source I with a diameter of ~100
+                   AU scale.},
+  doi =           {10.1088/2041-8205/782/2/L28},
+  eid =           {L28},
+}
+
+@article{Plambeck2016a,
+  author =        {{Plambeck}, R.~L. and {Wright}, M.~C.~H.},
+  journal =       {\apj},
+  month =         dec,
+  pages =         {219},
+  title =         {{ALMA Observations of Orion Source I at 350 and 660
+                   GHz}},
+  volume =        {833},
+  year =          {2016},
+  abstract =      {Orion Source I (``SrcI'') is the protostar at the
+                   center of the Kleinmann-Low Nebula. ALMA observations
+                   of SrcI with 0."2 angular resolution were made at 350
+                   and 660 GHz to search for the H26alpha and H21alpha
+                   hydrogen recombination lines and to measure the
+                   continuum flux densities. The recombination lines
+                   were not detected, ruling out the possibility that
+                   SrcI is a hypercompact H II region. The deconvolved
+                   size of the continuum source is approximately 0."23
+                   × 0."07 (˜100 × 30 au); it is interpreted as a
+                   disk viewed almost edge-on. Optically thick thermal
+                   emission from ˜500 K dust is the most plausible
+                   source of the continuum, even at frequencies as low
+                   as 43 GHz; the disk mass is most likely in the range
+                   0.02-0.2 {M}&sun; . A rich spectrum of molecular
+                   lines is detected, mostly from sulfur- and
+                   silicon-rich molecules like SO, SO2, and SiS, but
+                   also including vibrationally excited CO and several
+                   unidentified transitions. Lines with upper energy
+                   levels {E}{{U}}\gt 500 K appear in emission and are
+                   symmetric about the source's LSR velocity of 5 {km}
+                   {{{s}}}-1, while lines with {E}{{U}}\lt 500 K appear
+                   as blueshifted absorption features against the
+                   continuum, indicating that they originate in
+                   outflowing gas. The emission lines exhibit a velocity
+                   gradient along the major axis of the disk that is
+                   consistent with rotation around a 5-7 {M}&sun;
+                   central object. The relatively low mass of SrcI and
+                   the existence of a 100 au disk around it are
+                   difficult to reconcile with the model in which SrcI
+                   and the nearby Becklin-Neugebauer Object were ejected
+                   from a multiple system 500 years ago.},
+  doi =           {10.3847/1538-4357/833/2/219},
+  eid =           {219},
+}
+
+@article{Ginsburg2018b,
+  author =        {{Ginsburg}, A. and {Bally}, J. and {Goddi}, C. and
+                   {Plambeck}, R. and {Wright}, M.},
+  journal =       {\apj},
+  month =         jun,
+  pages =         {119},
+  title =         {{A Keplerian Disk around Orion SrCI,
+                   a{\nbsp}{\sim}{\nbsp}15 M $_{&sun;}$ YSO}},
+  volume =        {860},
+  year =          {2018},
+  abstract =      {We report ALMA long-baseline observations of Orion
+                   Source I (SrcI), with a resolution 0."03--0."06
+                   (12--24 au) at 1.3 and 3.2 mm. We detect both
+                   continuum and spectral line emission from SrcI's
+                   disk. We also detect a central weakly resolved source
+                   that we interpret as a hot spot in the inner disk,
+                   which may indicate the presence of a binary system.
+                   The high angular resolution and sensitivity of these
+                   observations allows us to measure the outer envelope
+                   of the rotation curve of the H2O 55,0--64,3 line,
+                   which gives a mass M I ≈ 15 $\pm$ 2 {M}o . We
+                   detected several other lines that more closely trace
+                   the disk, but were unable to identify their parent
+                   species. Using centroid-of-channel methods on these
+                   other lines, we infer a similar mass. These
+                   measurements solidify SrcI as a genuine high-mass
+                   protostar system and support the theory that SrcI and
+                   the Becklin-Neugebauer Object were ejected from the
+                   dynamical decay of a multiple-star system ~500 years
+                   ago, an event that also launched the explosive
+                   molecular outflow in Orion.},
+  doi =           {10.3847/1538-4357/aac205},
+  eid =           {119},
+}
+
+@article{Goddi2009a,
+  author =        {{Goddi}, C. and {Greenhill}, L.~J. and
+                   {Humphreys}, E.~M.~L. and {Matthews}, L.~D. and
+                   {Tan}, J.~C. and {Chandler}, C.~J.},
+  journal =       {\apj},
+  month =         feb,
+  pages =         {1254-1264},
+  title =         {{A 42.3-43.6 GHz Spectral Survey of Orion BN/KL:
+                   First Detection of the v = 0 J = 1-0 Line from the
+                   Isotopologues $^{29}$SiO and $^{30}$SiO}},
+  volume =        {691},
+  year =          {2009},
+  abstract =      {We have surveyed molecular line emission from Orion
+                   BN/KL from 42.3 to 43.6 GHz with the Green Bank
+                   Telescope. Sixty-seven lines were identified and
+                   ascribed to 13 different molecular species. The
+                   spectrum at 7 mm is dominated by SiO, SO2, CH3OCH3,
+                   and C2H5CN. Five transitions have been detected from
+                   the SiO isotopologues 28SiO, 29SiO, and 30SiO. We
+                   report here for the first time the spectra of the
+                   29SiO and 30SiO v = 0 J = 1-0 emission in Orion
+                   BN/KL, and show that they have double-peaked profiles
+                   with velocity extents similar to the main
+                   isotopologue. The main motivation for the survey was
+                   the search of high-velocity (100-1000 km s-1)
+                   outflows in the BN/KL region as traced by SiO Doppler
+                   components. Some of the unidentified lines in
+                   principle could be high-velocity SiO features, but
+                   without imaging data their location cannot be
+                   established. Wings of emission are present in the v =
+                   0 28SiO, 29SiO, and 30SiO profiles, and we suggest
+                   that the v = 0 emission from the three isotopologues
+                   might trace a moderately high-velocity (~30-50 km
+                   s-1) component of the flows around the high-mass
+                   protostar Source I in the Orion BN/KL region. We also
+                   confirm the 7 mm detection of a complex
+                   oxygen-bearing species, acetone (CH3COCH3), which has
+                   been recently observed toward the hot core at 3 mm,
+                   and have found further indications of the presence of
+                   long cyanopolyynes (HC5N and HC7N) in the quiescent
+                   cold gas of the extended ridge.},
+  doi =           {10.1088/0004-637X/691/2/1254},
+}
+
+@article{Goddi2010a,
+  author =        {{Goddi}, C. and {Greenhill}, L. and {Humphreys}, E. and
+                   {Matthews}, L. and {Chandler}, C.},
+  journal =       {Highlights of Astronomy},
+  month =         nov,
+  pages =         {750-750},
+  title =         {{A movie of accretion/ejection of material in a
+                   high-mass YSO in Orion BN/KL at radii comparable to
+                   the Solar System}},
+  volume =        {15},
+  year =          {2010},
+  abstract =      {Around high-mass Young Stellar Objects (YSOs),
+                   outflows are expected to be launched and collimated
+                   by accretion disks inside radii of 100 AU. Strong
+                   observational constraints on disk-mediated accretion
+                   in this context have been scarce, largely owing to
+                   difficulties in probing the circumstellar gas at
+                   scales 10-100 AU around high-mass YSOs, which are on
+                   average distant (>1 Kpc), form in clusters, and
+                   ignite quickly whilst still enshrouded in dusty
+                   envelopes. Radio Source I in Orion BN/KL is the
+                   nearest example of a high-mass YSO, and only one of
+                   three YSOs known to power SiO masers. Using VLA and
+                   VLBA observations of different SiO maser transitions,
+                   the KaLYPSO project
+                   (http://www.cfa.harvard.edu/kalypso/) aims to
+                   overcome past observational limitations by mapping
+                   the structure, 3-D velocity field, and dynamical
+                   evolution of the circumstellar gas within 1000 AU
+                   from Source I. Based on 19 epochs of VLBA
+                   observations of v=1,2 SiO masers over ~2 years, we
+                   produced a movie of bulk gas flow tracing the compact
+                   disk and the base of the protostellar wind at radii <
+                   100 AU from Source I. In addition, we have used the
+                   VLA to map 7mm SiO v=0 emission and track proper
+                   motions over 10 years. We identify a narrowly
+                   collimated outflow with a mean motion of 18 km/s at
+                   radii 100-1000 AU, along a NE-SW axis perpendicular
+                   to that of the disk traced by the v=1,2 masers. The
+                   VLBA and VLA data exclude alternate models that place
+                   outflow from Source I along a NW-SE axis. The
+                   analysis of the complete (VLBA and VLA) dataset
+                   provides the most detailed evidence to date that
+                   high-mass star formation occurs via disk-mediated
+                   accretion.},
+  doi =           {10.1017/S174392131001135X},
+}
+
+@article{Greenhill2013a,
+  author =        {{Greenhill}, L.~J. and {Goddi}, C. and
+                   {Chandler}, C.~J. and {Matthews}, L.~D. and
+                   {Humphreys}, E.~M.~L.},
+  journal =       {\apjl},
+  month =         jun,
+  pages =         {L32},
+  title =         {{Dynamical Evidence for a Magnetocentrifugal Wind
+                   from a 20 M $_{&sun;}$ Binary Young Stellar Object}},
+  volume =        {770},
+  year =          {2013},
+  abstract =      {In Orion BN/KL, proper motions of lambda7 mm
+                   vibrationally excited SiO masers trace the rotation
+                   of a nearly edge-on disk and a bipolar wide-angle
+                   outflow 10-100 AU from radio source I, a binary young
+                   stellar object of ~20 M &sun;. Here we map
+                   ground-state lambda7 mm SiO emission with the Very
+                   Large Array and track proper motions over 9 yr. The
+                   innermost and strongest emission lies in two extended
+                   arcs bracketing Source I. The proper motions trace a
+                   northeast-southwest bipolar outflow 100-1000 AU from
+                   Source I with a median three-dimensional motion of
+                   ~18 km s-1. An overlying distribution of lambda1.3 cm
+                   H2O masers betrays similar flow characteristics. Gas
+                   dynamics and emission morphology traced by the masers
+                   suggest the presence of a magnetocentrifugal disk
+                   wind. Reinforcing evidence lies in the colinearity of
+                   the flow, apparent rotation across the flow parallel
+                   to the disk rotation, and recollimation that narrows
+                   the flow opening angle ~120 AU downstream. The arcs
+                   of ground-state SiO emission may mark the transition
+                   point to a shocked super-Alfv{\'e}nic outflow.},
+  doi =           {10.1088/2041-8205/770/2/L32},
+  eid =           {L32},
+}
+
 @article{Cernicharo1987a,
   author =        {{Cernicharo}, J. and {Guelin}, M.},
   journal =       {\aap},
@@ -168,6 +420,46 @@
                    structure. (abridged)},
 }
 
+@article{Girart2017a,
+  author =        {{Girart}, J.~M. and {Estalella}, R. and
+                   {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
+                   {Frau}, P and {Galvan-Madrid}, R. and {Rao}, R. and
+                   {Busquet}, G. and {Ju{\'a}rez}, C.},
+  journal =       {ArXiv e-prints},
+  month =         jul,
+  title =         {{The circumestellar disk of the B0 protostar powering
+                   the HH 80-81 radio jet}},
+  year =          {2017},
+  abstract =      {We present subarcsecond angular resolution
+                   observations carried out with the Submillimeter Array
+                   (SMA) at 880 $\mu$m centered at the B0-type protostar
+                   GGD27~MM1, the driving source of the parsec scale HH
+                   80-81 jet. We constrain its polarized continuum
+                   emission to be $\lesssim0.8\%$ at this wavelength.
+                   Its submm spectrum is dominated by sulfur-bearing
+                   species tracing a rotating disk--like structure (SO
+                   and SO$_2$ isotopologues mainly), but also shows
+                   HCN-bearing and CH$_3$OH lines, which trace the disk
+                   and the outflow cavity walls excavated by the HH
+                   80-81 jet. The presence of many sulfurated lines
+                   could indicate the presence of shocked gas at the
+                   disk's centrifugal barrier or that MM1 is a hot core
+                   at an evolved stage. The resolved SO$_2$ emission
+                   traces very well the disk kinematics and we fit the
+                   SMA observations using a thin-disk Keplerian model,
+                   which gives the inclination (47$^{\circ}$), the inner
+                   ($\lesssim170$ AU) and outer ($\sim950-1300$~AU)
+                   radii and the disk's rotation velocity (3.4 km
+                   s$^{-1}$ at a putative radius of 1700 AU). We roughly
+                   estimate a protostellar dynamical mass of 4-18\msun.
+                   MM2 and WMC cores show, comparatively, an almost
+                   empty spectra suggesting that they are associated
+                   with extended emission detected in previous
+                   low-angular resolution observations, and therefore
+                   indicating youth (MM2) or the presence of a less
+                   massive object (WMC).},
+}
+
 @article{Caris2004a,
   author =        {{Caris}, M. and {Lewen}, F. and
                    {M{\"u}ller}, H.~S.~P. and {Winnewisser}, G.},
@@ -213,6 +505,43 @@
   doi =           {10.1016/j.molstruc.2003.11.010},
 }
 
+@article{Caris2002a,
+  author =        {{Caris}, M. and {Lewen}, F. and {Winnewisser}, G.},
+  journal =       {Zeitschrift Naturforschung Teil A},
+  month =         aug,
+  pages =         {663-668},
+  title =         {{Pure Rotational Spectroscopy of Sodium Chloride,
+                   NaCl, up to 930 GHz}},
+  volume =        {57},
+  year =          {2002},
+  abstract =      {The pure rotational spectra of both isotopomers of
+                   NaCl, i. e. 23Na35Cl and 23Na37Cl, have been recorded
+                   in high resolution with the Cologne terahertz
+                   spectrometer. A total of 189 new rotational lines
+                   have been measured in the frequency region between
+                   200 and 930 GHz. Twenty nine of these transitions are
+                   assigned for Na35Cl to the vibrational ground state
+                   with J < 72, and 102 lines arise from vibrationally
+                   excited states up to the 5th vibrational state: nu =
+                   5̅. For Na37Cl a total of 58 rotational lines with J
+                   <= 76 and nu <= 4 could be detected. The newly
+                   measured lines were fitted together with the
+                   published microwave and millimeter-wave transitions
+                   to obtain a refined and extended set of molecular
+                   parameters: Na35Cl: B0 = 6513.04908(41) MHz, D0 =
+                   9.338978(141) kHz, H0 = -1.0433(144) mHz and Na37Cl:
+                   B0 = 6373.74158(66) MHz, D0 = 8.943327(185) kHz, H0 =
+                   -0.9623(162) mHz. From the experimental data the
+                   equilibrium constants Be, alpha, gamma, De, beta,
+                   delta, He and ε are calculated as well. The refined
+                   parameters for both isotopomers allow precise
+                   frequency predictions to be made far into the
+                   terahertz region. Thus this new and highly precise
+                   data set for NaCl is intended to support future
+                   astrophysical observations.},
+  doi =           {10.1515/zna-2002-0805},
+}
+
 @article{Barton2014a,
   author =        {{Barton}, E.~J. and {Chiu}, C. and {Golpayegani}, S. and
                    {Yurchenko}, S.~N. and {Tennyson}, J. and
@@ -243,208 +572,6 @@
                    electronic form as supplementary data to this paper
                    and at www.exomol.com.},
   doi =           {10.1093/mnras/stu944},
-}
-
-@article{McGuire2018a,
-  author =        {{McGuire}, Brett~A. and {Martin-Drumel}, Marie-Aline and
-                   {Lee}, Kin~Long~Kelvin and {Stanton}, John~F. and
-                   {Gottlieb}, Carl~A. and {McCarthy}, Michael~C.},
-  month =         {Apr},
-  title =         {Vibrational Satellites of C$_2$S, C$_3$S, and C$_4$S:
-                   Microwave Spectral Taxonomy as a Stepping Stone to
-                   the Millimeter-Wave Band},
-  year =          {2018},
-  abstract =      {We present a microwave spectral taxonomy study of
-                   several hydrocarbon/CS$_2$ discharge mixtures in
-                   which more than 60 distinct chemical species, their
-                   more abundant isotopic species, and/or their
-                   vibrationally excited states were detected using
-                   chirped-pulse and cavity Fourier-transform microwave
-                   spectroscopies. Taken together, in excess of 85
-                   unique variants were detected, including several new
-                   isotopic species and more than 25 new vibrationally
-                   excited states of C$_2$S, C$_3$S, and C$_4$S, which
-                   have been assigned on the basis of published
-                   vibration-rotation interaction constants for C$_3$S,
-                   or newly calculated ones for C$_2$S and C$_4$S. On
-                   the basis of these precise, low-frequency
-                   measurements, several vibrationally exited states of
-                   C$_2$S and C$_3$S were subsequently identified in
-                   archival millimeter-wave data in the 253--280 GHz
-                   frequency range, ultimately providing highly accurate
-                   catalogs for astronomical searches. As part of this
-                   work, formation pathways of the two smaller
-                   carbon-sulfur chains were investigated using $^{13}$C
-                   isotopic spectroscopy, as was their vibrational
-                   excitation. The present study illustrates the utility
-                   of microwave spectral taxonomy as a tool for complex
-                   mixture analysis, and as a powerful and convenient
-                   `stepping stone' to higher frequency measurements in
-                   the millimeter and submillimeter bands.},
-}
-
-@article{Hirota2014a,
-  author =        {{Hirota}, T. and {Kim}, M.~K. and {Kurono}, Y. and
-                   {Honma}, M.},
-  journal =       {\apjl},
-  month =         feb,
-  pages =         {L28},
-  title =         {{A Hot Molecular Circumstellar Disk around the
-                   Massive Protostar Orion Source I}},
-  volume =        {782},
-  year =          {2014},
-  abstract =      {We report new Atacama Large Millimeter/Submillimeter
-                   Array (ALMA) observations of a circumstellar disk
-                   around Source I in Orion KL, an archetype of massive
-                   protostar candidates. We detected two ortho-H2O lines
-                   at 321 GHz (102, 9-93, 6) and 336 GHz (nu2 = 1, 52,
-                   3-61, 6) for the first time in Source I. The latter
-                   one is in a vibrationally excited state at the lower
-                   state energy of 2939 K, suggesting evidence of hot
-                   molecular gas close to Source I. The integrated
-                   intensity map of the 321 GHz line is elongated along
-                   the bipolar outflow while the 336 GHz line map is
-                   unresolved with a beam size of 0.''4. Both of these
-                   maps show velocity gradients perpendicular to the
-                   bipolar outflow. The velocity centroid map of the 321
-                   GHz line implies a spatial and velocity structure
-                   similar to that of vibrationally excited SiO masers
-                   tracing the root of the outflow emanating from the
-                   disk surface. In contrast, the 336 GHz line is most
-                   likely emitting from the disk midplane with a
-                   diameter of 0.''2 (84 AU) as traced by radio
-                   continuum emission and a dark lane devoid of the
-                   vibrationally excited SiO maser emission. The
-                   observed velocity gradient and the spectral profile
-                   of the 336 GHz H2O line can be reconciled with a
-                   model of an edge-on ring-like structure with an
-                   enclosed mass of >7 M &sun; and an excitation
-                   temperature of >3000 K. The present results provide
-                   further evidence of a hot and neutral circumstellar
-                   disk rotating around Source I with a diameter of ~100
-                   AU scale.},
-  doi =           {10.1088/2041-8205/782/2/L28},
-  eid =           {L28},
-}
-
-@article{Plambeck2016a,
-  author =        {{Plambeck}, R.~L. and {Wright}, M.~C.~H.},
-  journal =       {\apj},
-  month =         dec,
-  pages =         {219},
-  title =         {{ALMA Observations of Orion Source I at 350 and 660
-                   GHz}},
-  volume =        {833},
-  year =          {2016},
-  abstract =      {Orion Source I (``SrcI'') is the protostar at the
-                   center of the Kleinmann-Low Nebula. ALMA observations
-                   of SrcI with 0."2 angular resolution were made at 350
-                   and 660 GHz to search for the H26alpha and H21alpha
-                   hydrogen recombination lines and to measure the
-                   continuum flux densities. The recombination lines
-                   were not detected, ruling out the possibility that
-                   SrcI is a hypercompact H II region. The deconvolved
-                   size of the continuum source is approximately 0."23
-                   × 0."07 (˜100 × 30 au); it is interpreted as a
-                   disk viewed almost edge-on. Optically thick thermal
-                   emission from ˜500 K dust is the most plausible
-                   source of the continuum, even at frequencies as low
-                   as 43 GHz; the disk mass is most likely in the range
-                   0.02-0.2 {M}&sun; . A rich spectrum of molecular
-                   lines is detected, mostly from sulfur- and
-                   silicon-rich molecules like SO, SO2, and SiS, but
-                   also including vibrationally excited CO and several
-                   unidentified transitions. Lines with upper energy
-                   levels {E}{{U}}\gt 500 K appear in emission and are
-                   symmetric about the source's LSR velocity of 5 {km}
-                   {{{s}}}-1, while lines with {E}{{U}}\lt 500 K appear
-                   as blueshifted absorption features against the
-                   continuum, indicating that they originate in
-                   outflowing gas. The emission lines exhibit a velocity
-                   gradient along the major axis of the disk that is
-                   consistent with rotation around a 5-7 {M}&sun;
-                   central object. The relatively low mass of SrcI and
-                   the existence of a 100 au disk around it are
-                   difficult to reconcile with the model in which SrcI
-                   and the nearby Becklin-Neugebauer Object were ejected
-                   from a multiple system 500 years ago.},
-  doi =           {10.3847/1538-4357/833/2/219},
-  eid =           {219},
-}
-
-@article{Ginsburg2018b,
-  author =        {{Ginsburg}, A. and {Bally}, J. and {Goddi}, C. and
-                   {Plambeck}, R. and {Wright}, M.},
-  journal =       {\apj},
-  month =         jun,
-  pages =         {119},
-  title =         {{A Keplerian Disk around Orion SrCI,
-                   a{\nbsp}{\sim}{\nbsp}15 M $_{&sun;}$ YSO}},
-  volume =        {860},
-  year =          {2018},
-  abstract =      {We report ALMA long-baseline observations of Orion
-                   Source I (SrcI), with a resolution 0."03--0."06
-                   (12--24 au) at 1.3 and 3.2 mm. We detect both
-                   continuum and spectral line emission from SrcI's
-                   disk. We also detect a central weakly resolved source
-                   that we interpret as a hot spot in the inner disk,
-                   which may indicate the presence of a binary system.
-                   The high angular resolution and sensitivity of these
-                   observations allows us to measure the outer envelope
-                   of the rotation curve of the H2O 55,0--64,3 line,
-                   which gives a mass M I ≈ 15 $\pm$ 2 {M}o . We
-                   detected several other lines that more closely trace
-                   the disk, but were unable to identify their parent
-                   species. Using centroid-of-channel methods on these
-                   other lines, we infer a similar mass. These
-                   measurements solidify SrcI as a genuine high-mass
-                   protostar system and support the theory that SrcI and
-                   the Becklin-Neugebauer Object were ejected from the
-                   dynamical decay of a multiple-star system ~500 years
-                   ago, an event that also launched the explosive
-                   molecular outflow in Orion.},
-  doi =           {10.3847/1538-4357/aac205},
-  eid =           {119},
-}
-
-@article{Girart2017a,
-  author =        {{Girart}, J.~M. and {Estalella}, R. and
-                   {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
-                   {Frau}, P and {Galvan-Madrid}, R. and {Rao}, R. and
-                   {Busquet}, G. and {Ju{\'a}rez}, C.},
-  journal =       {ArXiv e-prints},
-  month =         jul,
-  title =         {{The circumestellar disk of the B0 protostar powering
-                   the HH 80-81 radio jet}},
-  year =          {2017},
-  abstract =      {We present subarcsecond angular resolution
-                   observations carried out with the Submillimeter Array
-                   (SMA) at 880 $\mu$m centered at the B0-type protostar
-                   GGD27~MM1, the driving source of the parsec scale HH
-                   80-81 jet. We constrain its polarized continuum
-                   emission to be $\lesssim0.8\%$ at this wavelength.
-                   Its submm spectrum is dominated by sulfur-bearing
-                   species tracing a rotating disk--like structure (SO
-                   and SO$_2$ isotopologues mainly), but also shows
-                   HCN-bearing and CH$_3$OH lines, which trace the disk
-                   and the outflow cavity walls excavated by the HH
-                   80-81 jet. The presence of many sulfurated lines
-                   could indicate the presence of shocked gas at the
-                   disk's centrifugal barrier or that MM1 is a hot core
-                   at an evolved stage. The resolved SO$_2$ emission
-                   traces very well the disk kinematics and we fit the
-                   SMA observations using a thin-disk Keplerian model,
-                   which gives the inclination (47$^{\circ}$), the inner
-                   ($\lesssim170$ AU) and outer ($\sim950-1300$~AU)
-                   radii and the disk's rotation velocity (3.4 km
-                   s$^{-1}$ at a putative radius of 1700 AU). We roughly
-                   estimate a protostellar dynamical mass of 4-18\msun.
-                   MM2 and WMC cores show, comparatively, an almost
-                   empty spectra suggesting that they are associated
-                   with extended emission detected in previous
-                   low-angular resolution observations, and therefore
-                   indicating youth (MM2) or the presence of a less
-                   massive object (WMC).},
 }
 
 @article{Agundez2012a,
@@ -640,87 +767,3 @@
   doi =           {10.1051/0004-6361:20065718},
 }
 
-@article{Testi2010a,
-  author =        {{Testi}, L. and {Tan}, J.~C. and {Palla}, F.},
-  journal =       {\aap},
-  month =         nov,
-  pages =         {A44},
-  title =         {{The near-infrared reflected spectrum of source I in
-                   Orion-KL}},
-  volume =        {522},
-  year =          {2010},
-  abstract =      {Context. Source I in the Orion-KL nebula is believed
-                   to be the nearest example of a massive star still in
-                   the main accretion phase. It is thus one of the best
-                   cases for studying the properties of massive
-                   protostars to constrain high-mass star formation
-                   theories. Near-infrared radiation from source I
-                   escapes through the cavity opened by the OMC1 outflow
-                   and is scattered by dust towards our line of sight.
-                   Aims: The reflected spectrum offers a unique
-                   possibility of observing the emission from the
-                   innermost regions of the system and probing the
-                   nature of source I and its immediate surroundings.
-                   Methods: We obtained moderately high
-                   spectral-resolution (lambda/Deltalambda 9000)
-                   observations of the near infrared diffuse emission in
-                   several locations around source I/Orion-KL. We
-                   observed a widespread rich absorption line spectrum
-                   that we compare with cool stellar photospheres and
-                   protostellar accretion disk models. Results: The
-                   spectrum is broadly similar to strongly veiled, cool,
-                   low-gravity stellar photospheres in the range Teff
-                   3500-4500 K, luminosity class I-III. An exact match
-                   explaining all features has not been found, and a
-                   plausible explanation is that a range of different
-                   temperatures contribute to the observed absorption
-                   spectrum. The 1D velocity dispersions implied by the
-                   absorption spectra, sigma 30 km s-1, can be explained
-                   by the emission from a disk around a massive, m_* 10
-                   M_&sun;, protostar that is accreting at a high rate,
-                   dot{m_*} 3 × 10-3 M_&sun; yr-1. Conclusions: Our
-                   observations suggest that the near-infrared
-                   reflection spectrum observed in the Orion-KL region
-                   is produced close to source I and scattered to our
-                   line of sight in the OMC1 outflow cavity. The
-                   spectrum allows us to exclude source I being a very
-                   large, massive protostar rotating at breakup speed.
-                   We suggest that the absorption spectrum is produced
-                   in a disk surrounding a 10 M_&sun; protostar,
-                   accreting from its disk at a high rate of a few ×
-                   10-3 M_&sun;/yr). Based on observations collected at
-                   the European Southern Observatory, Chile. Program
-                   076.C-0660.},
-  doi =           {10.1051/0004-6361/201014497},
-  eid =           {A44},
-}
-
-@ARTICLE{Goldsmith2017,
-   author = {{Goldsmith}, P.~F. and {Kauffmann}, J.},
-    title = "{Electron Excitation of High Dipole Moment Molecules Re-examined}",
-  journal = {\apj},
-archivePrefix = "arXiv",
-   eprint = {1708.07553},
- keywords = {ISM: molecules, molecular processes, photon-dominated region: PDR},
-     year = 2017,
-    month = may,
-   volume = 841,
-      eid = {25},
-    pages = {25},
-      doi = {10.3847/1538-4357/aa6f12},
-   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...841...25G},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{Dickinson1975,
-   author = {{Dickinson}, A.~S. and {Richards}, D.},
-    title = "{The rotational excitation of polar molecules by electrons}",
-  journal = {Journal of Physics B Atomic Molecular Physics},
-     year = 1975,
-    month = dec,
-   volume = 8,
-    pages = {2846-2857},
-      doi = {10.1088/0022-3700/8/17/017},
-   adsurl = {http://adsabs.harvard.edu/abs/1975JPhB....8.2846D},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
