--- a/lines_in_band7.tex
+++ b/lines_in_band7.tex
@@ -1,6 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{All detected lines in Band 7}
+\caption{All observed lines in Band 7}
 \begin{tabular}{ccccccc}
 \label{tab:all_detections_B7}
 Species & v & J$_u$ & J$_l$ & E$_U$ & Frequency & Flag \\
